substrate/frame/support/test/tests/pallet_ui/genesis_inconsistent_build_config.stderr
error: Invalid genesis builder: expected `BuildGenesisConfig`
  --> tests/pallet_ui/genesis_inconsistent_build_config.rs:36:18
   |
36 |     impl<T: Config> GenesisBuild<T> for GenesisConfig {}
   |                     ^^^^^^^^^^^^

error: expected `BuildGenesisConfig`
  --> tests/pallet_ui/genesis_inconsistent_build_config.rs:36:18
   |
36 |     impl<T: Config> GenesisBuild<T> for GenesisConfig {}
   |                     ^^^^^^^^^^^^
